--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ server {
       proxy_set_header X-Scheme                $scheme;
       proxy_set_header X-Auth-Request-Redirect $request_uri;
     }
+    
     location ~ ^/(?<name_space>[^/]*)/(?<rest_of_url>.*) {
       auth_request /oauth2/auth;
       error_page 401 = /oauth2/sign_in;
@@ -25,7 +26,7 @@ server {
       proxy_http_version 1.1;
       chunked_transfer_encoding off;
       proxy_set_header Host $host;
-      resolver $RESOLVER_IP:53;
+      resolver $RESOLVER_IP:53 valid=30s;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_pass http://$SERVICE_NAME.$name_space.svc.cluster.local/$rest_of_url;
       }
