--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,5 @@
 server {
+    listen       80;
     location /oauth2/ {
       proxy_pass       http://127.0.0.1:4180;
       proxy_set_header Host                    $host;
