--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ server {
       proxy_set_header X-Auth-Request-Redirect $request_uri;
     }
     
-    location ~ ^/(?<name_space>[^/]*)/(?<rest_of_url>.*) {
+    location ~ ^(?<name_space>((?!oauth2).)[^/]*)/(?<rest_of_url>.*) {
       auth_request /oauth2/auth;
       error_page 401 = /oauth2/sign_in;
       # pass information via X-User and X-Email headers to backend,
