fix: remove regex

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ server {
       proxy_set_header X-Auth-Request-Redirect $request_uri;
     }
     
-    location ~ ^(?<name_space>((?!oauth2).)[^/]*)/(?<rest_of_url>.*) {
+    location /staging/ {
       auth_request /oauth2/auth;
       error_page 401 = /oauth2/sign_in;
       # pass information via X-User and X-Email headers to backend,
@@ -29,11 +29,12 @@ server {
       proxy_set_header Host $host;
       resolver $RESOLVER_IP:53 valid=30s;
       proxy_set_header X-Real-IP $remote_addr;
-      proxy_pass http://$SERVICE_NAME.$name_space.svc.cluster.local/$rest_of_url;
+      proxy_pass http://$SERVICE_NAME.staging.svc.cluster.local/;
       }
-
+      
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
           root   /usr/share/nginx/html;
       }
+    
 }
