--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,7 @@
 server {
     listen       80;
-    location /oauth2/ {
-      proxy_pass       http://127.0.0.1:4180;
-      proxy_set_header Host                    $host;
-      proxy_set_header X-Real-IP               $remote_addr;
-      proxy_set_header X-Scheme                $scheme;
-      proxy_set_header X-Auth-Request-Redirect $request_uri;
-    }
     
-    location /staging/ {
-      auth_request /oauth2/auth;
-      error_page 401 = /oauth2/sign_in;
-      # pass information via X-User and X-Email headers to backend,
-
-      # requires running with --set-xauthrequest flag
-      auth_request_set $user   $upstream_http_x_auth_request_user;
-      auth_request_set $email  $upstream_http_x_auth_request_email;
-      proxy_set_header X-User  $user;
-      proxy_set_header X-Email $email;
-
-      # if you enabled --cookie-refresh, this is needed for it to work with auth_request
-      auth_request_set $auth_cookie $upstream_http_set_cookie;
-      add_header Set-Cookie $auth_cookie;
+    location ~ ^/(?<name_space>[^/]*)/(?<rest_of_url>.*) {
 
       proxy_set_header Connection '';
       proxy_http_version 1.1;
@@ -29,12 +9,12 @@ server {
       proxy_set_header Host $host;
       resolver $RESOLVER_IP:53 valid=30s;
       proxy_set_header X-Real-IP $remote_addr;
-      proxy_pass http://$SERVICE_NAME.staging.svc.cluster.local/;
-      }
       
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-          root   /usr/share/nginx/html;
-      }
-    
+      proxy_pass http://$SERVICE_NAME.$name_space.svc.cluster.local/$rest_of_url;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 }
