--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen       80;
+    rewrite ^([^.]*[^/])$ $1/ permanent;
     
     location ~ ^/(?<name_space>[^/]*)/(?<rest_of_url>.*) {
 
@@ -13,18 +14,6 @@ server {
       proxy_pass http://$SERVICE_NAME.$name_space.svc.cluster.local/$rest_of_url;
     }
     
-    location ~ ^/(?<name_space>.*) {
-
-      proxy_set_header Connection '';
-      proxy_http_version 1.1;
-      chunked_transfer_encoding off;
-      proxy_set_header Host $host;
-      resolver $RESOLVER_IP:53 valid=30s;
-      proxy_set_header X-Real-IP $remote_addr;
-      
-      proxy_pass http://$SERVICE_NAME.$name_space.svc.cluster.local/;
-    }
-
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
