fix: retrun 404 at root

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,10 @@ server {
     listen       80;
     rewrite ^([^.]*[^/])$ $1/ permanent;
     
+    location / {
+      return 404;
+    }
+    
     location ~ ^/(?<name_space>[^/]*)/(?<rest_of_url>.*) {
 
       proxy_set_header Connection '';
